5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4002/executions/1590_825.log
== TEST (2019-03-31 12:15:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var3 = π**(var1*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var3 = π**(var1*2)
NameError: name 'π' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:15:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var3 = π**(var1*2)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var3 = π**(var1*2)
NameError: name 'π' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:17:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = π**(var1*2)
var3 = 4/3**π*3

print = round(var2, 3)
print = round(var3, 3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2 = π**(var1*2)
NameError: name 'π' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:17:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = π**(var1*2)
var3 = 4/3**π*3

print = round(var2, 3)
print = round(var3, 3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2 = π**(var1*2)
NameError: name 'π' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:17:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = π**(var1*2)
var3 = 4/3**π*3

print = round(var2, 3)
print = round(var3, 3)

-- EXECUTION TIME:
0.149076
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 5, in <module>
    var2 = \u03c0**(var1*2)
NameError: name '\u03c0' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = π**(var1*2)
var3 = 4/3**π*3

print(round(var2, 3))
print(round(var3, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2 = π**(var1*2)
NameError: name 'π' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:18:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = π**(var1*2)
var3 = 4/3**π*3

print(round(var2, 3))
print(round(var3, 3))

-- EXECUTION TIME:
0.202544
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 5, in <module>
    var2 = \u03c0**(var1*2)
NameError: name '\u03c0' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:18:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = π**(var1*2)
var3 = 4/3**π*3

print(round(var2, 3))
print(round(var3, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2 = π**(var1*2)
NameError: name 'π' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:19:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = pi**(var1*2)
var3 = 4/3**pi*3

print(round(var2, 3))
print(round(var3, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    var2 = pi**(var1*2)
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:19:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var1 = float(input("raio r"))
var2 = pi**(var1*2)
var3 = 4/3**pi*3

print(round(var2, 3))
print(round(var3, 3))

-- EXECUTION TIME:
0.143847
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 5, in <module>
    var2 = pi**(var1*2)
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
